--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     },
     "devDependencies": {
         "axios": "^0.18.0",
+        "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-preset-react": "^6.23.0",
+        "babel-preset-stage-2": "^6.24.1",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -17,6 +19,9 @@
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
         "react": "^16.2.0",
-        "react-dom": "^16.2.0"
+        "react-dom": "^16.2.0",
+        "react-redux": "^5.0.6",
+        "react-router-dom": "^4.2.2",
+        "redux": "^3.7.2"
     }
 }
